Kriya: add example 'pom.xml' to skill 'ignite-java17' from supplied reference material